# nuke-python-stubs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENCE  LICENSE  README.md  manual_changes.json  nuke_stubs_generator.py  nukestubsgen.py  pyproject.toml  sync_stubs.sh
nuke_stubs/nuke/: __init__.py
nuke_stubs/nuke/nuke_classes/: Node.py
nuke_stubs/nuke/nukescripts/: ViewerProcess.py  __init__.py  all_plugins.py  animation.py  applymaterial.py  autobackdrop.py  blinkscripteditor.py  bookmarks.py  cache.py  camera.py  cameratracker.py  captureViewer.py  clientserver.py  create.py  crop.py  edit.py  execute.py  flags.py  flip.py  flipbooking.py  fnFlipbookRenderer.py  frame.py  framecycler.py  framerangepanel.py  group.py  importexport.py  info.py  (+33 more)
nukestubsgen/: nuke_stubs_generator.py  nukestubsgen.py
stubs/hiero/: FnPythonFixes.py  FnRedirect.py  __init__.py  path.py
stubs/nuke/: __init__.py  __init__.pyi
stubs/nukescripts/: ViewerProcess.py  __init__.py  _asset.py  all_plugins.py  animation.py  applymaterial.py  autobackdrop.py  blinkscripteditor.py  bookmarks.py  cache.py  camera.py  camerapresets.py  cameratracker.py  captureViewer.py  cattery.py  clientserver.py  create.py  crop.py  drop.py  edit.py  execute.py  flags.py  flip.py  flipbooking.py  fnFlipbookRenderer.py  frame.py  framecycler.py  framerangepanel.py  group.py  hardwareinfo.py  importexport.py  info.py  localisationprefs.py  misc.py  modelbuilder.py  nodepresets.py  nodes.py  nukeprofiler.py  openurl.py  panel_test.py  (+29 more)
stubs/ocionuke/: __init__.py  cdl.py  config.py  viewer.py
(+587 files in other folders)
