[tool.poetry]
name = "Nuke Python Stubs Generator"
version = "0.2.5"
description = "Create Nuke Python Stubs"
authors = ["virgilsisoe <sisoe24@gmail.com>"]

[tool.isort]
length_sort = true

[tool.autopep8]
max_line_length = 90

[tool.poetry.dependencies]
python = "~3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
